tests/negative/gold/abstractB_test.gold
tests/negative/abstractB_test.toit:7:12: error: Abstract members can't have bodies
  abstract bar:
           ^~~
tests/negative/abstractB_test.toit:10:7: error: Non-abstract class 'B' is missing implementations
class B extends A:
      ^
tests/negative/abstractB_test.toit:7:12: note: Missing implementation for 'bar'
  abstract bar:
           ^~~
tests/negative/abstractB_test.toit:8:5: error: Unresolved identifier: 'gee'
    gee
    ^~~
Compilation failed.
